2003-10-31  Hans Petter Jansson  <hpj@ximian.com>

	* gui/calendar-component.c (calendar_component_init): Add the webcal
	source group.

	* gui/dialogs/new-calendar.c (print_uri_noproto): Implement.
	(group_is_remote): Implement.
	(create_new_source_with_group): Implement webcal case.
	(new_calendar_dialog): Get optional location from dialog.

	* gui/dialogs/new-calendar.glade: Add location entry.

	* pcs/Makefile.am: Build http backend.

	* pcs/cal-backend-http.[ch]: Add skeleton based on cal-backend-file.

2003-10-31  Dan Winship  <danw@ximian.com>

	* cal-util/cal-util.h: Add CAL_STATIC_CAPABILITY_NO_THISANDFUTURE
	and CAL_STATIC_CAPABILITY_NO_THISANDPRIOR

	* gui/dialogs/recur-comp.c (recur_component_dialog): Add a
	CalClient argument. Use cal_client_get_static_capability to decide
	whether or not to offer THISANDFUTURE and THISANDPRIOR options

	* gui/dialogs/comp-editor.c (prompt_to_save_changes, save_cmd,
	save_close_cmd): Pass a CalClient to recur_component_dialog.

	* gui/e-day-view.c (e_day_view_finish_long_event_resize,
	e_day_view_finish_resize, e_day_view_on_editing_stopped,
	e_day_view_on_top_canvas_drag_data_received,
	e_day_view_on_main_canvas_drag_data_received): Likewise

	* gui/e-week-view.c (e_week_view_on_editing_stopped): Likewise

	* gui/calendar-component.c (impl_createControls): set an exception
	if we fail, so evo won't crash.

2003-10-31  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-calendar-table.c (e_calendar_table_show_popup_menu): fixed
	mismatched condition in if/else statement.

2003-10-30  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-tasks.[ch] (e_tasks_get_cal_client): removed.

	* gui/tasks-control.c (sensitize_commands): fixed to work correctly
	with the ECalView's model.
	(tasks_control_set_property): don't use e_tasks_get_cal_client.

	* gui/alarm-notify/alarm-notify.c (free_client_hash): new function
	to remove items from the CalClient's hash table.
	(alarm_notify_finalize): call free_client_hash() for each item